[gd_scene load_steps=13 format=3 uid="uid://cd3myu31d37mo"]

[ext_resource type="Theme" uid="uid://c0vxpi7ss20u6" path="res://resources/ui_theme.tres" id="1_syvep"]
[ext_resource type="Script" uid="uid://bxsm6tru7fhlm" path="res://scripts/user_interface.gd" id="2_l2bgj"]
[ext_resource type="Texture2D" uid="uid://bg8dve4rdsdd3" path="res://assets/art/star_particle_texture.png" id="3_y1h3b"]
[ext_resource type="Texture2D" uid="uid://bwn2s6b7nfe63" path="res://assets/art/fruits/apple.png" id="4_jbsfc"]
[ext_resource type="Texture2D" uid="uid://dtbfu2edkm1tr" path="res://assets/art/fruits/strawberry.png" id="5_lmgon"]
[ext_resource type="Texture2D" uid="uid://cc501387ctwrj" path="res://assets/art/fruits/orange.png" id="6_xsrv6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cufge"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lmgon"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xsrv6"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sdud1"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_aisij"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_prbuy"]
radius = 12.0

[node name="UserInterface" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_syvep")
script = ExtResource("2_l2bgj")

[node name="StartLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -263.0
offset_top = 32.0
offset_right = 263.0
offset_bottom = 69.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Press enter to start"
uppercase = true

[node name="ScoreLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -49.0
offset_top = 6.0
offset_right = 49.0
offset_bottom = 25.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Score: 0"
uppercase = true

[node name="PauseLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -18.5
offset_right = 70.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Pause"
uppercase = true

[node name="GameOverLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -18.5
offset_right = 134.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Game Over!"
uppercase = true

[node name="GameWonLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -18.5
offset_right = 20.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "You win!"
uppercase = true

[node name="GameWonEffect" type="CPUParticles2D" parent="."]
modulate = Color(0, 0.633333, 1, 0.498039)
position = Vector2(320, 240)
emitting = false
amount = 500
texture = ExtResource("3_y1h3b")
lifetime = 1.25
one_shot = true
speed_scale = 1.5
explosiveness = 0.75
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 200)
initial_velocity_min = 250.0
initial_velocity_max = 500.0
scale_amount_min = 0.1
scale_amount_max = 0.1

[node name="TouchControls" type="Control" parent="."]
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RightButton" type="TouchScreenButton" parent="TouchControls"]
position = Vector2(640, 416)
rotation = 1.5708
scale = Vector2(2, 2)
texture_normal = ExtResource("4_jbsfc")
shape = SubResource("CircleShape2D_cufge")
action = "move_right"
visibility_mode = 1

[node name="LeftButton" type="TouchScreenButton" parent="TouchControls"]
position = Vector2(448, 480)
rotation = -1.5708
scale = Vector2(2, 2)
texture_normal = ExtResource("4_jbsfc")
shape = SubResource("CircleShape2D_lmgon")
action = "move_left"
visibility_mode = 1

[node name="UpButton" type="TouchScreenButton" parent="TouchControls"]
position = Vector2(512, 352)
scale = Vector2(2, 2)
texture_normal = ExtResource("4_jbsfc")
shape = SubResource("CircleShape2D_xsrv6")
action = "move_up"
visibility_mode = 1

[node name="DownButton" type="TouchScreenButton" parent="TouchControls"]
position = Vector2(576, 480)
rotation = 3.14159
scale = Vector2(2, 2)
texture_normal = ExtResource("4_jbsfc")
shape = SubResource("CircleShape2D_sdud1")
action = "move_down"
visibility_mode = 1

[node name="StartButton" type="TouchScreenButton" parent="TouchControls"]
position = Vector2(0, 416)
scale = Vector2(2, 2)
texture_normal = ExtResource("5_lmgon")
shape = SubResource("CircleShape2D_aisij")
action = "enter"
visibility_mode = 1

[node name="PauseButton" type="TouchScreenButton" parent="TouchControls"]
position = Vector2(0, 352)
scale = Vector2(2, 2)
texture_normal = ExtResource("6_xsrv6")
shape = SubResource("CircleShape2D_prbuy")
action = "pause"
visibility_mode = 1
